--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: jamie beverley
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/me" # the subpath of your site, e.g. /blog
+url: "https://jamiebeverley.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jamiebeverley
 theme: minima
 
