--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ pages:
 collections:
   ramblings:
     output: true
+google_analytics: G-ESYJ224FG2
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
