--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -14,6 +14,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
+      - name: Install
+        uses: bundle install
+
       - name: Build
         uses: actions/jekyll-build-pages@v1
       - name: Upload artifact
