--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Install
-        uses: bundle install
+        run: bundle install
 
       - name: Build
         uses: actions/jekyll-build-pages@v1
