try naming artifact

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
+        with:
+          name: me-site
+        
 
   deploy:
     environment:
@@ -60,4 +63,6 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: me-site
